syntax = "proto3";
package back;

service UserService {
  rpc Register (RegisterRequest) returns (RegisterResponse);

  rpc Login (LoginRequest) returns (LoginResponse);

  rpc GetUser (GetUserRequest) returns (GetUserResponse);

  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);

  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}


message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  User user = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1; // JWT-токен
}

message GetUserRequest {
  int64 user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  int64 user_id = 1;
  optional string username = 2; // Опциональные поля
  optional string email = 3;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  int64 user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

// Общая модель пользователя
message User {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string created_at = 4; // Timestamp как строка
}